Optimized CachedBatch iterator and fixes seen in tests
 - new region iterator based access to directly access CachedBatches instead of via
   ResultSet (which has a significant overhead for tight-loop aggregates)
 - removed the scanUnsafeRows flag and code which was for local perf comparison
 - added a ColumnCacheBenchmark adapted from the one in Spark PR#13899 for Spark caching vs SnappyData
 - fixed decoding for BinaryType, ArrayType etc that do not have a typeId
 - fixed a bug in RowTableScan that closed iterator too soon
 - updated tests for new batchSize of 4 which was changed from 3 previously for occasional
   failures in some other tests